--- a/Clase13/vercel.json
+++ b/Clase13/vercel.json
@@ -1,7 +1,7 @@
 {
     "version" : 2,
     "builds"  : [{
-    "src" : "*.py",
+    "src" : "Clase13/*.py",
     "use" : "@vercel/python"
     }],
     "roads"   : [{
